import java.util.ArrayList;
import java.util.List;

public class Main {
    public static void main(String[] args) {
        Streaming s1 = new Streaming();
        s1.streamingSetup();
    }
}
