import java.util.ArrayList;

public class UserMenu {

    private ArrayList<User> users;



    public void runUserSetupDialog(){

    }
    public void displayUsers(){

    }
    
    public boolean logIn(String userName,String passWord) {
        return true;
    }
    public void logOut(){

    }

    public void createAccount(String userName, String passWord){

    }
    public void playMedia(){

    }

    public void deleteSavedMedia(){

    }


}
