@startuml
!pragma layout smetana

class UserMenu
class Movies
class Series
class User
class Main
class FileIO
class TextUI
class Streaming
Interface IO

Main o-- Streaming
Streaming o-- UserMenu
UserMenu o-- User

UserMenu o-- TextUI
Streaming o-- IO
IO <|-- FileIO
UserMenu o-- FileIO



Streaming <|-- Movies
Streaming <|-- Series

class Streaming{
  - ArrayList<Media> medias
}

Interface IO{
- Scanner scanner
}

class Main{
  + static void main(string [] args)
}

class TextUI{
  + String getInput(String msg)
  - Scanner scanner
  + void displayMessage(String msg)
}

class FileIO{
  + ArrayList<Player> readPlayerData(String path)
  + void savePlayerData(ArrayList<Player> players)
  + String[] readBoardData(String path, int length)
}

class UserMenu{
  - ArrayList<User> users
  - TextUI ui
  - FileIO io
  + void runUserSetupDialog()
  + void displayUsers()
  + boolean logIn(String userName, String Password)
  + void logOut()
  + void createAccount(String userName, String password)
  + Media searchMedia(String title)
  + void playMedia()
  + void saveMedia(Media media)
  + void deleteSavedMedia()
}

class User {
  - String userName
  - String password
  - ArrayList<Media> watchedList
  - ArrayList<Media> savedList
}

class Movies {
  - String title
  - int year
  - ArrayList<String> categories
  - double rating
  + void displayDetails()
  + void toString()
}


@enduml